implements User Service and Upgrade Order Service